feat: implement generic table component with support for custom columns and button actions